--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 *.log
 .*
 !.gitignore
-project/
-target/
+TDD/Test-Driven Development/project
+TDD/Test-Driven Development/target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
